--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^5.0.0
   intl: ^0.17.0
+  http: ^0.13.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +35,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
